2012-01-09  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclUtf.c:      [Bug 3464428] string is graph \u0120 is wrong
	* generic/regcomp.c:     Remove some unused code
	* generic/regc_locale.c: Add table for Unicode [:cntrl:] class
	* tools/uniClass.tcl:    Generate Unicode [:cntrl:] class table
	* tests/utf.test:
	* doc/re_syntax:         Fix [:print:] class description

2011-12-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclUtf.c:     [Bug 3464428] string is graph \u0120 is wrong
	* generic/tclUniData.c:
	* generic/regc_locale.c:
	* tests/utf.test:
	* tools/uniParse.tcl:   clean up some unused stuff, and be more robust
	against changes in UnicodeData.txt syntax

2011-12-07  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/uniParse.tcl:    [Bug 3444754] string tolower \u01c5 is wrong
	* generic/tclUniData.c:
	* tests/utf.test:

2011-11-30  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/tcltest/tcltest.tcl: [Bug 967195]: Make tcltest work
	when tclsh is compiled without using the setargv() function on mingw.
	(no need to incr the version, since 2.2.10 is never released)

2011-11-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/tclsh.1:  Use the same shebang comment everywhere.
	* tools/str2c
	* tools/tcltk-man2html.tcl

2011-11-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclCmdAH.c:   [Bug 2935503] Windows: file mtime
	* generic/tclIOUtil.c:  sets wrong time

2011-10-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinFile.c:    [Bug 2935503] Incorrect mode field
	returned by file stat command

2011-10-07  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinChan.c:    Fix various gcc warnings
	* win/tclWinConsole.c: (discovered with latest
	* win/tclWinNotify.c:  mingw, based on gcc 4.6.1)
	* win/tclWinReg.c:
	* tests/env.test:      Fix env.test, when running
	under wine 1.3 (partly backported from Tcl 8.6)

2011-09-26  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc:  Support Visual Studio 11
