@@ -707,10 +707,9 @@ proc http::cleanup {token} {
 proc http::Connect {token} {
     variable $token
     upvar 0 $token state
-    global errorInfo errorCode
     if {[eof $state(sock)] ||
-	[string length [fconfigure $state(sock) -error]]} {
-	    Finish $token "connect failed [fconfigure $state(sock) -error]" 1
+	    [string length [set err [fconfigure $state(sock) -error]]]} {
+	Finish $token "connect failed $err" 1
     } else {
 	set state(status) connect
 	fileevent $state(sock) writable {}
